# diecastor

./: .env.example  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 39b3251386c7_initial_table_schemas.py
diecastor/api/: app.py
diecastor/db/: engine.py  schemas.py
diecastor/settings/: config.py  logger.py
tests/: test_api.py
